// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignInForm /> should render SignInForm 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className=""
  >
    <div
      className="form-item"
    >
      <label
        htmlFor="email"
      >
        E-mail
      </label>
      <input
        className="textfield"
        id="email"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="E-mail"
        type="email"
        value=""
      />
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="form-item"
    >
      <label
        htmlFor="password"
      >
        Password
      </label>
      <input
        className="textfield"
        id="password"
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
  </div>
  <div>
    <button
      disabled={true}
      type="submit"
    >
      Sign In
    </button>
  </div>
</form>
`;

exports[`<SignInForm /> should render SignInForm with captcha when has captchaRequired prop 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    className=""
  >
    <div
      className="form-item"
    >
      <label
        htmlFor="email"
      >
        E-mail
      </label>
      <input
        className="textfield"
        id="email"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="E-mail"
        type="email"
        value=""
      />
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="form-item"
    >
      <label
        htmlFor="password"
      >
        Password
      </label>
      <input
        className="textfield"
        id="password"
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="g-recaptcha"
      data-badge="bottomright"
      data-size="normal"
      data-tabindex="0"
      data-theme="light"
      data-type="image"
      id="g-recaptcha"
    />
  </div>
  <div>
    <button
      disabled={true}
      type="submit"
    >
      Sign In
    </button>
  </div>
</form>
`;
